--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "support-dashboard",
 	"version": "0.0.1",
 	"private": true,
+	"engines" : {
+		"node" : "18.x"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -12,7 +15,6 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.106",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -24,8 +26,7 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"typescript": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
