--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "support-dashboard",
 	"version": "0.0.1",
 	"private": true,
-	"engines" : {
-		"node" : "18.x"
+	"engines": {
+		"node": "18.x"
 	},
 	"scripts": {
 		"dev": "vite dev",
@@ -12,12 +12,16 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"migrate": "drizzle-kit generate:mysql"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^1.20.4",
+		"@types/node": "^20.4.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"dotenv": "^16.3.1",
+		"drizzle-kit": "^0.19.10",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -30,7 +34,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@planetscale/database": "^1.8.0",
 		"@sveltejs/adapter-vercel": "^3.0.2",
+		"drizzle-orm": "^0.27.2",
+		"mysql2": "^3.5.2",
 		"sass": "^1.64.1"
 	}
 }
