--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"migrate": "drizzle-kit generate:mysql"
+		"db:push": "drizzle-kit push:mysql",
+		"db:pull": "drizzle-kit introspect:mysql",
+		"db:generate": "drizzle-kit generate:mysql"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^1.20.4",
@@ -29,14 +31,20 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-superforms": "^1.6.1",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0"
+		"typescript": "^5.0.0",
+		"zod": "^3.22.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-mysql": "^2.0.0",
+		"@lucia-auth/sveltekit": "^0.6.11",
 		"@planetscale/database": "^1.8.0",
 		"@sveltejs/adapter-vercel": "^3.0.2",
 		"drizzle-orm": "^0.27.2",
+		"lucia": "^2.4.2",
+		"lucia-auth": "^1.8.0",
 		"mysql2": "^3.5.2",
 		"sass": "^1.64.1"
 	}
