--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 		"node": "18.x"
 	},
 	"scripts": {
-		"dev": "npm run dev",
-		"build": "npm run build",
-		"preview": "npm run preview",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
