--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"drizzle-orm": "^0.27.2",
 		"lucia": "^2.4.2",
 		"mysql2": "^3.5.2",
-		"sass": "^1.64.1",
+		"node-ical": "^0.16.1",
 		"vite": "^4.4.9"
 	}
 }
