--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-plugin-svelte": "^2.34.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.69.3",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"sveltekit-superforms": "^1.8.0",
