--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"db:push": "drizzle-kit push:mysql",
-		"db:pull": "drizzle-kit introspect:mysql",
-		"db:generate": "drizzle-kit generate:mysql"
+		"db:push": "drizzle-kit push",
+		"db:pull": "drizzle-kit introspect",
+		"db:generate": "drizzle-kit generate",
+		"db:drop": "drizzle-kit drop"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^1.25.2",
@@ -23,7 +24,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"dotenv": "^16.3.1",
-		"drizzle-kit": "^0.19.13",
+		"drizzle-kit": "^0.22.1",
 		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.34.0",
@@ -39,12 +40,14 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@lucia-auth/adapter-mysql": "^2.1.0",
+		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"@neondatabase/serverless": "^0.9.3",
+		"@node-rs/argon2": "^1.8.3",
 		"@planetscale/database": "^1.11.0",
 		"@sveltejs/adapter-vercel": "^3.0.3",
-		"drizzle-orm": "^0.27.2",
-		"lucia": "^2.7.1",
-		"mysql2": "^3.6.2",
+		"drizzle-orm": "^0.31.0",
+		"lucia": "^3.2.0",
+		"pg": "^8.11.5",
 		"rrule": "^2.7.2",
 		"vite": "^4.4.11"
 	}
